--- a/main.css
+++ b/main.css
@@ -590,3 +590,196 @@ section {
 footer.footer-distributed ,a {
     color: white;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.slider-league{
+  width: 19%;
+  height:700px;
+  display: flex;
+  position: relative;
+  margin: auto;
+  overflow: hidden;
+  margin-left: 78%;
+  margin-top: 10%;
+}
+
+
+.leagues{
+  width: 100%;
+  height:100%;
+  background: #FEFBF6;
+  border-radius: 2%;
+  position: absolute;
+  transition: transform .4s ease-in-out;
+}
+.leagues h1{
+  color: #000000;
+  align-items: center;
+  column-gap: 12px;
+  padding: 15px;
+  font-size: 18px;
+}
+
+.leagues .league {
+  color: #000000;
+  column-gap: 12px;
+  font-size: 18px;
+  margin-top: -15%;
+  margin-left: 12%;
+}
+
+.leagues img{
+  width: 17%;
+  height: 5%;
+  object-fit: cover;
+  border-radius: 100%;
+  display: block;
+  margin: 0 auto;
+  margin-right: 35px;
+}
+
+.leagues .flag {
+  width: 9%;
+  height: 2%;
+  object-fit: cover;
+  border-radius: 70%;
+  margin: 0 auto;
+  margin-left: 5%;
+  margin-top: -15%;
+}
+
+.leagues .content-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.7em;
+  min-width: 50px;
+  overflow: hidden;
+  font-weight: bold;
+}
+
+.content-table thead tr th {
+  background-color: #70B247;
+  
+  }
+
+.content-table thead tr {
+  background-color: #70B247;
+  border-radius: 9px 9px 0 0;
+  color: #ffffff;
+  text-align: left;
+  font-weight: bold;
+}
+
+.content-table th,
+.content-table td {
+    padding: 9px 11px;
+}
+
+.content-table td img {
+  width: 30px;
+  object-fit: cover;
+  border-radius: 70%;
+  margin: 0 auto;
+  margin-left: -70%;
+  margin-top: -1%;
+}
+
+.content-table td p {
+  color: #000000;
+  font-size: 18px;
+  margin-top: -43%;
+  margin-left: -4%;
+}
+
+
+
+
+.drops{
+  position: absolute;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .3rem;
+  z-index: 1;
+  margin-left: 28%;
+  margin-top: 8.1%;
+}
+
+.drops .drop{
+  width: 0.6rem;
+  height: 0.6rem;
+  background-color: black;
+  opacity: .18;
+  border-radius: 50%;
+  transition: opacity .2s ease-in-out;
+  cursor: pointer;
+}
+
+@media screen and (max-width:950px) {
+  .slider-league{
+    width: 35%;
+  }
+}
+
+@media screen and (max-width:950px) {
+  .slider-league{
+    width: 35%;
+  }
+}
