--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@
 	 align-items: center;
 	 justify-content: center;
 	 flex-direction: column;
-	 margin-top: 1%;
+	 margin-top: 1.5%;
 }
  .theme-switch {
 	 --background: #fff;
@@ -74,18 +74,17 @@
  .light-theme .sidebar a{
 	color: rgb(0, 0, 0);
 	font-weight: 400;
-	font-size: 120%;	
+	font-size: 100%;	
 }
- .light-theme .sidebar-heading{
+.light-theme .sidebar-heading{
 	color:black;
-	
- }
+}
  .light-theme .sidebar a:hover,
  .sidebar  {
    background-color: #000000f8 !important;
    color: #ffffff !important;
-   border-radius: 15px !important; 
  }
+ 
  .card {
   /* border-radius: 23px; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -96,7 +95,7 @@
  
 
  .light-theme .sidebar {
-    background-color:#ffffff!important;
+    background-color: #ECEAEA!important;
 	height: 70%;
  }
 
@@ -113,47 +112,54 @@
 
 
 
- .navigation {
-	 display: flex;
-	 justify-content: center;
+.navigation {
+	display: flex;
+	justify-content: center;
 }
- ul {
-	 display: flex;
-	 list-style-type: none;
+
+ul {
+	display: flex;
+	list-style-type: none;
 }
- ul a {
-	 margin: 10px 30px;
-	 position: relative;
-	 color: var(--text);
-	 font-family: 'Oswald', sans-serif;
-	 font-size: 20px;
-	 text-transform: uppercase;
-	 text-decoration: none;
+
+ul a {
+	margin: 10px 30px;
+	position: relative;
+	color: var(--text);
+	font-family: 'Oswald', sans-serif;
+	font-size: 20px;
+	text-transform: uppercase;
+	text-decoration: none;
 }
- ul a:before {
-	 position: absolute;
-	 bottom: -2px;
-	 content: '';
-	 width: 100%;
-	 height: 3px;
-	 background: var(--highlight);
-	 transform: translateX(-100%);
-	 opacity: 0;
+
+ul a:before {
+	position: absolute;
+	bottom: -2px;
+	content: '';
+	width: 100%;
+	height: 3px;
+	background: var(--highlight);
+	transform: translateX(-100%);
+	opacity: 0;
 }
- ul a:hover:before {
-	 opacity: 1;
-	 transition: 0.1s transform ease, 0.1s opacity ease;
-	 transform: translateX(0);
-	 color:white; 
-	 text-decoration:none; 
+
+ul a:hover:before {
+	opacity: 1;
+	transition: 0.1s transform ease, 0.1s opacity ease;
+	transform: translateX(0);
+	color:white; 
+	text-decoration:none; 
 }
- ul .active {
-	 color: var(--highlight);
+
+ul .active {
+	color: var(--highlight);
 }
- ul .active:hover:before {
-	 opacity: 0;
+
+ul .active:hover:before {
+	opacity: 0;
 }
- a:hover {
+
+a:hover {
   color:rgb(255, 255, 255); 
   text-decoration:none; 
   cursor:pointer;  
@@ -161,6 +167,128 @@
 
 
 
+.sidebar {
+  position: absolute;
+  text-align: left;
+  left: 2%;
+  box-sizing: border-box;
+}
+
+.logo img {
+  width: 120%;
+  margin-right: 100px;
+  padding-top: 120px;
+}
+.logo .ooi {
+  position: absolute;
+}
+
+
+
+
+.sidebar a {
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+  padding: 7px 30px;
+  font-weight:0;
+  font-family: 'Oswald', sans-serif;
+  border: #15161600 3px  30px 30px 0px 0px;
+  font-size: 100%;
+}
+
+.sidebar a:hover,
+.sidebar a.active {
+  background-color: #61616138 !important;
+  color: #ffffff !important;
+}
+
+.sidebar-heading{
+  font-family: 'Oswald', sans-serif;
+  color: #ffffff;
+  padding-left: 25px;
+  margin-top: 100%;
+  font-size: 30px;
+  border-bottom: 0.5px solid #70B247;
+  margin: 5px 0;
+}
+
+
+.list-group-item,a{
+  background-color: #bb0f0f00 !important;
+}
+
+.list-group-item {
+position: relative;
+display: block;
+border:0px;
+}
+.container1{
+  width: 67%;
+  padding: 5%;
+  background-color:#ffffff11!important;
+  color: #ffffff;
+  border-radius:15px;
+  font-family: 'Oswald', sans-serif;
+}
+
+.sus{
+  background-color: #ffffff00;
+}
+
+
+.aa{
+      color: #ffffff;
+      left: 100%;
+      font-size: 80%;
+    }
+    .aa:hover{
+      color: #70B247;
+    }
+    .light-theme .sus{
+      color: #000000; 
+    }
+    .light-theme .aa:hover{
+      color: #70B247; 
+    }
+    .light-theme .aa{
+      color: #000000;
+    }
+    .see{
+      font-size: 50%;
+      color: #70B247;
+      
+    }
+    .favdark{
+          margin-top:-310px ;
+          margin-left:10%;
+          visibility: hidden;
+          
+        }
+
+    .favlight{
+          margin-top:-310px ;
+          margin-left:10%;
+          visibility: visible;
+          
+    }
+
+    .light-theme .leagues {
+
+      background-color: white;
+      color: #000000;
+    }
+    .light-theme .leagues h1{
+      color:black;
+    }
+    
+td:hover{
+background-color: rgba(109, 109, 109, 0.308);
+color:white;
+}
+td{
+border-radius: 25px;
+}
 
 
 
@@ -449,8 +577,7 @@ section {
 
 
 
-.slider-wrapper{
-  
+.slider-wrapper {
   width: 24%;
   height: 410px;
   display: flex;
@@ -458,11 +585,9 @@ section {
   margin: auto;
   overflow: hidden;
   margin-left: 85%;
-  margin-top: -304px;
   border-radius:15px;
-  
+  margin-top: 5%;
 }
-
 
 .slides{
   width: 100%;
@@ -472,6 +597,7 @@ section {
   position: absolute;
   transition: transform .4s ease-in-out;
 }
+
 .slides h1{
   color: #ffffff;
   align-items: center;
@@ -542,18 +668,12 @@ section {
   cursor: pointer;
 }
 
-@media screen and (max-width:950px) {
+@media screen and (max-width:1000px) {
   .slider-wrapper{
-    width: 35%;
+    width: 100%;
+    display: none;
   }
 }
-
-@media screen and (max-width:950px) {
-  .slider-wrapper{
-    width: 35%;
-  }
-}
-
 
 /*######################################################################*/
 
