--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 
 ::selection {
   color: black;
-  background: #70B247;
+  background: hsl(97, 43%, 49%);
 }
  body {
 	 background: var(--background);
@@ -20,7 +20,7 @@
 	 justify-content: center;
 	  
 	
-	 transition: 0.3s background ease;
+	 transition: 0s background ease;
 }
  .container {
 	 display: flex;
@@ -68,7 +68,18 @@
    text-decoration:none; 
 }
  
+thead th{
+  border: none !important;
+  border-bottom: none !important;
 
+}
+table{
+  color:white !important;
+  text-align: center;
+}
+td{
+  border:none !important ;
+}
 
 
  .light-theme .sidebar a{
@@ -171,6 +182,7 @@ a:hover {
   position: absolute;
   text-align: left;
   left: 2%;
+  top:18%;
   box-sizing: border-box;
 }
 
@@ -209,8 +221,9 @@ a:hover {
   padding-left: 25px;
   margin-top: 100%;
   font-size: 30px;
-  border-bottom: 0.5px solid #70B247;
+  border-bottom: 0.5px solid #000000;
   margin: 5px 0;
+  padding-bottom:9%;
 }
 
 
@@ -503,6 +516,11 @@ section {
   margin-bottom: 5px;
 }
 
+.match-tournament img{
+    
+  width: 30px;
+
+}
 
 /* hi this is mehdi i just want to tell  that this code is for the light mode */
 
@@ -563,7 +581,7 @@ section {
 
 }
 .logo{
-  height: 10vh;
+  height: 0vh;
   width: 10vh;
 }
 
@@ -586,7 +604,7 @@ section {
   overflow: hidden;
   margin-left: 85%;
   border-radius:15px;
-  margin-top: 5%;
+  margin-top: -20%;
 }
 
 .slides{
@@ -674,6 +692,29 @@ section {
     display: none;
   }
 }
+
+@media screen and (max-width:1000px) {
+  .sidebar{
+    width: 100%;
+    display: none;
+  }
+}
+@media screen and (max-width:1000px) {
+  .leagues{
+    width: 100%;
+    display: none;
+  }
+ 
+}
+
+@media screen and (max-width:1000px) {
+  .drop{
+    width: 100%;
+    display: none;
+  }
+ 
+}
+ 
 
 /*######################################################################*/
 
